--- a/vercel.json
+++ b/vercel.json
@@ -5,9 +5,9 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; img-src 'self' data:; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://unpkg.com; font-src 'self' https://unpkg.com;"
+          "value": "default-src 'self'; img-src 'self' data: https://www.google.com https://maps.gstatic.com; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://unpkg.com; font-src 'self' https://unpkg.com; frame-src 'self' https://www.google.com https://www.google.com/maps; connect-src 'self';"
         },
-        { "key": "X-Frame-Options", "value": "DENY" },
+        { "key": "X-Frame-Options", "value": "SAMEORIGIN" },
         { "key": "X-Content-Type-Options", "value": "nosniff" },
         { "key": "Referrer-Policy", "value": "strict-origin-when-cross-origin" },
         {
@@ -22,3 +22,4 @@
     }
   ]
 }
+
